Document native access and the demos that follow it
@jenesis.native grants native access where the running module declares it,
and jenesis.dependency.native=strict refuses an ungranted need a dependency
signals; the launcher reads the grants from enableNativeAccess and its
per-layer counterpart. The native-access demo sits after the agents demo, so
the demo numbers after it move up by one.